# planfirst

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ae3648ebd43_add_refresh_tokens_table.py  2d5f38b0a881_add_oauth_fields_to_users_table.py  3f560d276105_add_hashed_password_to_users_table.py  5b8a2405ee9b_add_preferred_language_to_user_.py  7b9f3c0b8d6c_add_user_type_to_users.py  81be3ae02ca2_initial_tables.py  9f5b2a7d4c1e_add_trip_messages_table.py
backend/app/: config.py  main.py  oauth.py
backend/app/agent/: agent.py  ai_client.py  flight_search.py  formatters.py  graph.py  hotel_search.py  image_search.py  language_utils.py  models.py  prompts.py  tools.py  train_search.py  trust.py  utils.py
backend/app/agent/phases/: __init__.py  assumptions.py  clarification.py  feasibility.py  planning.py  refinement.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  trip.py
backend/app/core/: security.py
backend/app/db/: crud.py  database.py  models.py
backend/app/schemas/: preference.py  trip.py  user.py
backend/app/services/: auth.py  google_oauth.py  trip.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/auth/callback/: AuthCallbackClient.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/plan/: page.tsx
frontend/src/app/trip/: TripPageClient.tsx  page.tsx
frontend/src/components/: BackendKeepAlive.tsx
frontend/src/components/chat/: ChatInterface.tsx  ImageCarousel.tsx  MarkdownRenderer.tsx  PlanInsightsPanel.tsx  VibeSelector.tsx
frontend/src/components/home/: HomeLayout.tsx  TripForm.tsx
frontend/src/components/layout/: ChatHistorySidebar.tsx  Header.tsx  UserMenu.tsx
frontend/src/components/ui/: dialog.tsx  popover.tsx  sidebar.tsx
frontend/src/lib/: api.ts  auth-client.ts  auth.ts  useProfile.ts
