[project]
name = "plandrift"
version = "0.1.0"
description = "A constraint-first travel planning CLI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "openai>=1.12.0",
    "pydantic>=2.5.0",
    "dotenv>=0.9.9",
    "ddgs>=8.0.0",
    "pwdlib[argon2]>=0.3.0",
    "alembic>=1.18.3",
]

[project.scripts]
plandrift = "plandrift.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plandrift"]
